2000-11-10  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/mount/mount_linux.c (mount_linux): removed unnecessary
	rsize/wsize defaults -- performance killers on 2.2.18+ and 2.4.0+

2000-10-16  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/am-eject.in: accept "cdrom" and "floppy" as arguments.

2000-11-05  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	Too many changes to list them here. Here's a high level
	description:

	* Forward-ported the Linux fixes from 6.0.5pre

	* Got rid of a mountain of #ifdef DEBUG, replaced with smart
	header-file #ifdef's

	* and, the grand finale: initial Solaris 2.6 autofs
	support. Compiles, mounts, gets requests; all the
	infrastructure is in place to actually implement the calls. Linux
	autofs might be a bit broken, but only compile-time so it'll be
	easy to fix.

2000-11-01  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* MIRRORS (Note): added a mirror at ufl.edu

2000-10-11  Erez Zadok  <ezk@lorien.dev.hydraweb.com>

	* amq/amq.8: synchronize Amq's options with reality

	* amq/amq.c (main): synchronize Amq's usage() string with reality

2000-10-10  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/ctl-amd.in: add targets condrestart (redhat) and
	reload.

2000-10-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/lostaltmail.in (vrfy_user): ensure that MAILDIR is
	defined.

2000-09-18  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* amd/opts.c (backslash): Bell char (ASCII 007) should be \g, not
	\a.

2000-09-17  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* include/am_utils.h: removed unused field opt_autopref

	* amd/opts.c: removed unused variable $autopref

2000-09-05  Erez Zadok  <ezk@aladdin.dev.hydraweb.com>

	* conf/mtab/mtab_svr4.c (lockfile): function not needed unless
	MOUNT_TABLE_ON_FILE is defined.
	mtlckname static var is onlyneeded if MOUNT_TABLE_ON_FILE.
	(update_mnttab_fields): only needed if MOUNT_TABLE_ON_FILE.
